--- a/wp7-donor/Donor/StationPageOld.xaml
+++ b/wp7-donor/Donor/StationPageOld.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="Donor.StationPage"
+    x:Class="Donor.StationPageOld"
 	xmlns:my="clr-namespace:Donor.Controls"  
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -30,6 +30,15 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Controls:ProgressOverlay Grid.Row="0" Name="progressOverlay" Height="800" Width="480">
+            <Controls:ProgressOverlay.Content>
+                <StackPanel>
+                    <TextBlock Foreground="#FFFFFFFF" VerticalAlignment="Center" HorizontalAlignment="Center" Text="{Binding Loading, Source={StaticResource Loc}}"/>
+                    <toolkit:PerformanceProgressBar Name="Loading" IsIndeterminate="True" Height="10" Background="#FFA3CE57" Foreground="#FFE22A1B" />
+                </StackPanel>
+            </Controls:ProgressOverlay.Content>
+        </Controls:ProgressOverlay>
+
         <controls:Panorama Grid.Row="1" Name="MainPanorama">
         	<controls:Panorama.Background>
             <ImageBrush ImageSource="images/bg_04.png"/>
@@ -51,6 +60,7 @@
                 </controls:PanoramaItem.Header>
                 <Grid Margin="0,10,0,0">
                     <StackPanel>
+                    	<my:VotesControl x:Name="rate" HorizontalAlignment="Left"/>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock TextWrapping="Wrap" Text="Адрес" 
                                        Style="{StaticResource Text36pxB9A194}" 
@@ -65,34 +75,25 @@
                                 <Image Height="50" Source="images/ic_map.png" Stretch="None" Width="50" 
                                        Tap="Image_Tap"/>
                             </Border>
-                        </StackPanel>
-                        <TextBlock TextWrapping="Wrap" Text="{Binding Address, Source={StaticResource Loc}}" 
+                        </StackPanel>              
+                        
+                        <TextBlock TextWrapping="Wrap" 
+                        Text="{Binding Adress}"	Style="{StaticResource Text24pxDF8D4B}"/>
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Phone, Source={StaticResource Loc}}" 
                         Style="{StaticResource Text36pxB9A194}" Margin="0,10,0,0"/>
                         
                         <TextBlock TextWrapping="Wrap" 
-                        Text="{Binding Address}" Style="{StaticResource Text24pxDF8D4B}"/>
-                        <TextBlock TextWrapping="Wrap" Text="{Binding Phone, Source={StaticResource Loc}}" 
-                        Style="{StaticResource Text36pxB9A194}" Margin="0,10,0,0"/>                        
-                        <TextBlock TextWrapping="Wrap" 
 						Text="{Binding Phone}"
 						Style="{StaticResource Text24pxDF8D4B}"/>
-
-                        <TextBlock TextWrapping="Wrap" 
-                        Text="{Binding Email}" Style="{StaticResource Text24pxDF8D4B}"/>
-                        <TextBlock TextWrapping="Wrap" 
-                        Text="{Binding Chief}" Style="{StaticResource Text24pxDF8D4B}"/>
-                        <TextBlock TextWrapping="Wrap" 
-                        Text="{Binding Region_name}" Style="{StaticResource Text24pxDF8D4B}"/>
-                        <TextBlock TextWrapping="Wrap" 
-                        Text="{Binding District_name}" Style="{StaticResource Text24pxDF8D4B}"/>
-                        <TextBlock TextWrapping="Wrap" 
-                        Text="{Binding Town}" Style="{StaticResource Text24pxDF8D4B}"/>
-
+                        <TextBlock  Margin="0,10,0,0"
+						Style="{StaticResource Text24pxDF8D4B}" 
+						Text="{Binding RegionalRegistrationString}" 
+						TextWrapping="Wrap"/>
                         <TextBlock Text="{Binding Site, Source={StaticResource Loc}}"   Margin="0,10,0,0"
 						Style="{StaticResource Text36pxB9A194}" 
 						TextWrapping="Wrap"/>
                         <TextBlock TextWrapping="Wrap" 
-						Text="{Binding Site}"
+						Text="{Binding NidUrl}"
 						Style="{StaticResource Text24pxDF8D4B}" Tap="TextBlock_Tap" />
                     </StackPanel>
                 </Grid>
@@ -106,6 +107,20 @@
                 </controls:PanoramaItem.Header>
                 <Grid>
                     <StackPanel>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding RecepientTime, Source={StaticResource Loc}}"  Margin="0,10,0,0"
+						Style="{StaticResource Text36pxB9A194}" />
+                        <TextBlock TextWrapping="Wrap" Style="{StaticResource Text24pxDF8D4B}" Text="{Binding ReceiptTime}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding TransportStation, Source={StaticResource Loc}}" Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding Transportaion}" 
+						Style="{StaticResource Text24pxDF8D4B}"/>
+                        <StackPanel Name="BloodFor">
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding BloodGivedFor, Source={StaticResource Loc}}"  Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
+                            <TextBlock Text="{Binding BloodFor}" TextWrapping="Wrap"  Style="{StaticResource Text24pxDF8D4B}"/>
+                        </StackPanel>
                     </StackPanel>
                 </Grid>
             </controls:PanoramaItem>
