--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -50,12 +50,13 @@
 					Text="{Binding MainStationPivot, Source={StaticResource Loc}}" Margin="0,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid Margin="0,10,0,0">
-                    <StackPanel>
+                    <ScrollViewer>
+                        <StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock TextWrapping="Wrap" Text="Адрес" 
                                        Style="{StaticResource Text36pxB9A194}" 
                                        Tap="TextBlock_Tap_1"/>
-                            <Border Width="50" Height="50" BorderThickness="3" Tap="Image_Tap">
+                            <!--<Border Width="50" Height="50" BorderThickness="3" Tap="Image_Tap">
                                 <Border.BorderBrush>
                                     <SolidColorBrush />
                                 </Border.BorderBrush>
@@ -64,7 +65,7 @@
                                 </Border.Background>
                                 <Image Height="50" Source="images/ic_map.png" Stretch="None" Width="50" 
                                        Tap="Image_Tap"/>
-                            </Border>
+                            </Border>-->
                         </StackPanel>
                         <TextBlock TextWrapping="Wrap" Text="{Binding Address, Source={StaticResource Loc}}" 
                         Style="{StaticResource Text36pxB9A194}" Margin="0,10,0,0"/>
@@ -95,11 +96,12 @@
 						Text="{Binding Site}"
 						Style="{StaticResource Text24pxDF8D4B}" Tap="TextBlock_Tap" />
                     </StackPanel>
+                    </ScrollViewer>
                 </Grid>
             </controls:PanoramaItem>
 
             <!--Panorama item two-->
-            <controls:PanoramaItem>
+            <!--<controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
 					Text="{Binding ForDonorsStation, Source={StaticResource Loc}}" Margin="-10,30,0,0"/>
@@ -108,7 +110,7 @@
                     <StackPanel>
                     </StackPanel>
                 </Grid>
-            </controls:PanoramaItem>
+            </controls:PanoramaItem>-->
 
 
         </controls:Panorama>
