--- a/wp7-donor/Donor/CalendarMonthPage.xaml
+++ b/wp7-donor/Donor/CalendarMonthPage.xaml
@@ -45,27 +45,6 @@
 		<StaticResource ResourceKey="PhoneForegroundBrush"/>
 	</phone:PhoneApplicationPage.Foreground>
 
-    <toolkit:TransitionService.NavigationInTransition>
-        <toolkit:NavigationInTransition>
-            <toolkit:NavigationInTransition.Backward>
-                <toolkit:TurnstileTransition Mode="BackwardIn"/>
-            </toolkit:NavigationInTransition.Backward>
-            <toolkit:NavigationInTransition.Forward>
-                <toolkit:TurnstileTransition Mode="ForwardIn"/>
-            </toolkit:NavigationInTransition.Forward>
-        </toolkit:NavigationInTransition>
-    </toolkit:TransitionService.NavigationInTransition>
-    <toolkit:TransitionService.NavigationOutTransition>
-        <toolkit:NavigationOutTransition>
-            <toolkit:NavigationOutTransition.Backward>
-                <toolkit:TurnstileTransition Mode="BackwardOut"/>
-            </toolkit:NavigationOutTransition.Backward>
-            <toolkit:NavigationOutTransition.Forward>
-                <toolkit:TurnstileTransition Mode="ForwardOut"/>
-            </toolkit:NavigationOutTransition.Forward>
-        </toolkit:NavigationOutTransition>
-    </toolkit:TransitionService.NavigationOutTransition>
-
 	<phone:PhoneApplicationPage.Background>
             <ImageBrush ImageSource="images/bg_04.png"/>
     </phone:PhoneApplicationPage.Background>
@@ -99,7 +78,7 @@
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,0,0,0">
             <StackPanel>
-                <my:MonthCalendar x:Name="Calendar1" Margin="0,0,0,0">
+                <my:MonthCalendar x:Name="Calendar1" Margin="0,-15,0,0">
                 </my:MonthCalendar>
 
                 <!--<Button Content="FadeOut" Click="Button_Click" />
