--- a/wp7-donor/Donor/AchievesPage.xaml
+++ b/wp7-donor/Donor/AchievesPage.xaml
@@ -38,7 +38,7 @@
             <StackPanel>
                     <ListBox Margin="0,15,-12,0" Name="AvailableBadges"
                              ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                             tilteffect:TiltEffect.IsTiltEnabled="True" Loaded="ListBox_Loaded">
+                             tilteffect:TiltEffect.IsTiltEnabled="True" Loaded="ListBox_Loaded" Tap="AvailableBadges_Tap">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="0,20,0,5" Width="432" Orientation="Horizontal">
